# atom.utils

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  TODO  doxy.in  readme.md  readme_zh.md
benchmark/: delegate.cpp  memory.cpp  poly.cpp  polymorphic.cpp
benchmark/include/: proxy.hpp
benchmark/src/: delegate.cpp  memory.cpp
cmake/in/: UtilsConfig.cmake.in  utils.pc.in
cmake/modules/: exec.cmake
include/: allocator.h  around.hpp  around_ptr.h  auxiliary.hpp  compressed_pair.h  concepts.h  concepts.hpp  core.hpp  counter.h  dense_map.h  exception.h  fwd.h  initializer.h  iterator.h  memory.hpp  memory_pool.h  meta.hpp  numbers.hpp  pair.h  patterns.h  pool.h  ranges.h  ranges.hpp  reflection.h  reflection.hpp  reflection_implementation.h  reversed_pair.h  signal.h  signal.hpp  sparse.h  sparse_map.h  sparse_set.h  storage.h  string_with_allocator.h  structures.hpp  thread.hpp  threads.h  timer.h  tstring.h  tuple.h  (+3 more)
include/auxiliary/: singleton.hpp
include/concepts/: allocator.hpp  mempool.hpp  ranges.hpp  type.hpp  uconceptdef.hpp
include/core/: closure.hpp  langdef.hpp  pair.hpp  pipeline.hpp  pipline_result.hpp  poly.hpp  polymorphic.hpp  tuple.hpp  type.hpp  type_traits.hpp
include/core/type_traits/: half.hpp  same.hpp
include/etc/: timer.hpp
include/memory/: align.hpp  allocator.hpp  around_ptr.hpp  copy.hpp  destroyer.hpp  pool.hpp  storage.hpp
include/meta/: algorithm.hpp  constexpr.hpp  list.hpp  sequence.hpp
include/misc/: timer.hpp
include/ranges/: element_view.hpp  iterator.hpp  to.hpp
include/reflection/: constexpr_extend.hpp  description.hpp  extend.hpp  field_traits.hpp  function_traits.hpp  hash.hpp  macros.hpp  member_count.hpp  member_name.hpp  member_value.hpp  name.hpp  reflected.hpp  register.hpp  registery.hpp  registry.hpp
include/reflection/aggregate/: member_count.hpp  member_name.hpp  member_value.hpp  tuple_view.hpp  tuple_view_helper.hpp
include/reflection/others/: member_count.hpp  member_name.hpp
include/signal/: delegate.hpp  dispatcher.hpp  lambda.hpp  sink.hpp  transient_collection.hpp
include/structures/: dense_map.hpp  dense_set.hpp  jumplist.hpp  linear.hpp  map.hpp  set.hpp  standard.hpp  string.hpp  string_with_allocator.h  tstring.hpp  tuple.hpp
include/thread/: corotine.hpp  coroutine.hpp  lock.hpp  lock_keeper.hpp  spin_lock.hpp  thread_pool.hpp
test/: core.cpp  memory.cpp  meta.cpp  output.hpp  ranges.cpp  reflection.cpp  signal.cpp  structures.cpp  thread.cpp
test/include/: require.hpp
test/src/: meta.cpp  ranges.cpp  signal.cpp  thread.cpp
